complete comment module, added text behind tiles for disclaimer module,fixing naming variable to camelCase

--- a/app/modules/aboutus/aboutus.module.less
+++ b/app/modules/aboutus/aboutus.module.less
@@ -1,8 +1,5 @@
-.au{
+.aboutUs{
   border: solid 1px @greyBorder;
-  height: 646px;
-  width: 680px;
-  font-family: @globalFont;
   i{
     color: @masterBrandColor;
   }
@@ -37,15 +34,15 @@
       margin: 0 auto;
       text-align: left;
       font-weight: 400;
-      &-hding{
+      &-heading{
         font-size: 16px;
         line-height: 30px;
       }
-      &-subtxt{
+      &-subtext{
         font-size: 12px;
         line-height: 30px;
       }
-      &-maintxt{
+      &-maintext{
         font-size: 14px;
       }
       &-provider{
