--- a/app/modules/comment/comment.module.less
+++ b/app/modules/comment/comment.module.less
@@ -2,3 +2,8 @@
   height: auto;
   width: 680px;
 }
+#disqus_thread{
+  width:100%;
+  height:auto;
+  background-color:@white;
+}
